--- a/components/plans.html
+++ b/components/plans.html
@@ -1,6 +1,6 @@
 <div class="plan plan--popular">
     <div class="card card--secondary">
-        <header class="class__header">
+        <header class="card__header">
             <h3 class="plan__name">Entry</h3>
             <span class="plan__price">$14</span>
             <span class="plan__billing-cycle">/month</span>
